<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/選擇項目"
        android:id="@+id/選擇項目"
        android:textSize="50sp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.2" >

        <Button
            android:layout_width="129dp"
            android:layout_height="90dp"
            android:text="@string/抓蜂"
            android:id="@+id/抓蜂"
            android:textSize="40sp"
            android:background="#ff6600"
            android:layout_gravity="center"
            android:layout_weight="0.5" />

        <Button
            android:layout_width="129dp"
            android:layout_height="90dp"
            android:text="@string/捕蛇"
            android:id="@+id/捕蛇"
            android:textSize="40sp"
            android:background="#ff3300"
            android:layout_gravity="center"
            android:layout_weight="0.5" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.2" >

        <Button
            android:layout_width="129dp"
            android:layout_height="90dp"
            android:text="@string/開鎖破門"
            android:id="@+id/開鎖破門"
            android:textSize="40sp"
            android:background="#ff6600"
            android:layout_gravity="center"
            android:layout_weight="0.5" />

        <Button
            android:layout_width="129dp"
            android:layout_height="90dp"
            android:text="@string/救貓狗"
            android:id="@+id/救貓狗"
            android:textSize="40sp"
            android:background="#ff3300"
            android:layout_gravity="center"
            android:layout_weight="0.5" />


    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.13" >

        <Button
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:text="@string/受困案件"
            android:id="@+id/受困案件"
            android:textSize="30sp"
            android:background="#ff6600"
            android:layout_gravity="center"
            android:layout_weight="0.5" />


    </LinearLayout>



    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/其它"
            android:id="@+id/其它"
            android:textSize="40sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/editText"
            android:layout_weight="1"
            android:hint="@string/輸入案件後再按其他按鈕"
            android:textSize="20sp"
            android:singleLine="true" />
    </LinearLayout>


</LinearLayout>