<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/選擇項目"
        android:id="@+id/選擇項目"
        android:textSize="50sp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.22" >

        <Button
            android:layout_width="129dp"
            android:layout_height="90dp"
            android:text="@string/妨礙安寧"
            android:id="@+id/妨礙安寧"
            android:textSize="40sp"
            android:background="#3399ff"
            android:layout_gravity="center"
            android:layout_weight="0.5" />

        <Button
            android:layout_width="129dp"
            android:layout_height="90dp"
            android:text="@string/家庭暴力"
            android:id="@+id/家庭暴力"
            android:textSize="40sp"
            android:background="#0066ff"
            android:layout_gravity="center"
            android:layout_weight="0.5" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.28" >

        <Button
            android:layout_width="129dp"
            android:layout_height="90dp"
            android:text="@string/違規檢舉"
            android:id="@+id/違規檢舉"
            android:textSize="40sp"
            android:background="#3399ff"
            android:layout_gravity="center"
            android:layout_weight="0.5" />

        <Button
            android:layout_width="129dp"
            android:layout_height="90dp"
            android:text="@string/為民服務"
            android:id="@+id/為民服務"
            android:textSize="40sp"
            android:background="#0066ff"
            android:layout_gravity="center"
            android:layout_weight="0.5" />


    </LinearLayout>



    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/其它"
            android:id="@+id/其它"
            android:textSize="40sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/editText"
            android:layout_weight="1"
            android:hint="@string/輸入案件後再按其他按鈕"
            android:textSize="20sp"
            android:singleLine="true" />
    </LinearLayout>


</LinearLayout>